--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-chartjs": "^4.1.2",
+    "chart.js": "^3.9.1"
   },
   "eslintConfig": {
     "root": true,
